fix gif overflow

--- a/src/app/quiz/mock/rules/rules.scss
+++ b/src/app/quiz/mock/rules/rules.scss
@@ -94,6 +94,10 @@
         & {
             .quiz-card {
                 max-width: 100% !important;
+
+                .answer-gifs {
+                    margin-left: 0 !important;
+                }
             }
         }
     }
